[package]
name = "bitcask-rs"
version = "0.1.0"
edition = "2021"

[[example]]
name = 'basic_operations'
path = 'examples/basic_operations.rs'


[dependencies]
parking_lot = "0.12.3"
log = "0.4"
env_logger = "0.11.5"
thiserror = "2.0.4"
bytes = "1.9.0"
prost = "0.13.4"
crc32fast = "1.4.2"
fs2 = "0.4.3"
fs_extra = "1.3.0"
crossbeam-skiplist = "0.1.3"
jammdb = "0.11.0"